--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,8 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
-
+*.h linguist-language=csharp
+*.m linguist-language=csharp
 ###############################################################################
 # Set the merge driver for project and solution files
 #
